# MathInSchool

./: .gitignore  app.py  main.py  pyproject.toml
src/: api.py  builder.py  settings.py  storage.py  types.py  useui.py
src/books/: shows.py
src/item/: select_item.py
src/item/books/: select_book.py  shows.py  type.py
src/item/books/content/: __init__.py  fill.py  select.py
src/item/books/content/fill/: fill_abc.py  fill_base.py  fill_new.py
src/item/books/content/select/: __init__.py  select_abc.py  select_base.py
src/item/books/type/: type_abc.py  type_base.py  type_new.py
src/select/: select_item.py
src/storage/: main.py  rollback.py  save.py  storage.py
src/support/: active.py  errors.py  my_iter.py  other.py  work_with_files.py
src/support/active/: base.py  book.py  item.py
ui/: __init__.py  custom_widgets.py  main_ui.py
ui/choice_video_or_answer/: choice.py  choice_video_or_answer_ui.py
ui/web_view/: base.py  web_view_ui.py
