[tool.poetry]
name = "mathinschool"
version = "0.1.0"
description = ""
authors = ["Misha <mihach2k17@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11,<3.13"
pyside6 = "^6.6.0"
requests = "^2.31.0"
pydantic = "^2.5.3"
python-dotenv = "^1.0.0"
ruff = "^0.1.11"
attrs = "^23.2.0"
auto-py-to-exe = "^2.42.0"
rich = "^13.7.1"
pytube = "^15.0.0"


[tool.poetry.group.dev.dependencies]
mypy = "^1.8.0"
types-requests = "^2.31.0.20240106"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
select = [
    "E",
    "T",
    "UP",
    #    "D",
    "W",
    "I",
    "N",
    "ANN001",
    "ANN201",
    "ANN202",
#    "ANN204",
    "ANN205",
    "ANN206",
#    "ANN401",
    #    "S",
    "B",
    "A",
    "COM",
    "C4"
]

fixable = ["A", "B", "C", "D", "E", "F", "G", "I", "N", "Q", "S", "T", "W", "ANN", "ARG", "BLE", "COM", "DJ", "DTZ", "EM", "ERA", "EXE", "FBT", "ICN", "INP", "ISC", "NPY", "PD", "PGH", "PIE", "PL", "PT", "PTH", "PYI", "RET", "RSE", "RUF", "SIM", "SLF", "TID", "TRY", "UP", "YTT"]
ignore = ["W291", "W293", "COM812"]
line-length = 125

target-version = "py311"

[tool.ruff.lint.flake8-annotations]
mypy-init-return = true